k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-client
  labels:
    app: ms-client
    tier: default
spec:
  selector:
    app: ms-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 
  type: LoadBalancer
