k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-client
  namespace: my-apps
spec:
  selector:
    app: ms-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
