k8s/gateway-client.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ms-client-gateway
  namespace: my-apps
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "nicolebertolo.com.br"
